2007-07-05  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (update_package_cache): Call need_cache_init
	instead of cache_init when some repositories had errors.

	* src/main.cc (refresh_package_cache_with_cont): Get the package
	list concurrently with showing the error report.

	Report details of catalogues that failed to refresh.  (Preliminary
	version with thoughtless UI.)
	
	* src/apt-worker.cc (find_catalogue_for_item_desc): New.
	(update_package_cache, cmd_update_package_cache): Add error
	messages to the catalogue xexpression and return that augmented
	xexp in the response.
	* src/main.cc (refresh_package_cache,
	refresh_package_cache_with_cont): Restructured cps for better
	documentation.  Expect and show catalogue xeps in response from
	apt_worker_update_cache.
		
	* src/apt-worker-proto.h (apt_proto_result_code): Added
	rescode_partial_success and rescode_cancelled.

	* src/repo.h, src/repo.cc (render_catalogue_report): New.

	* src/util.h, src/utils.cc (annoy_user_with_arbitrary_details):
	New.

2007-07-03  Marius Vollmer  <marius.vollmer@nokia.com>

	* utils/maemo-confirm-text-user.c (dialog_realized): Call
	find_application_manager_window instead of
	find_application_installer_window, stupid.

2007-07-02  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.15
	
	* src/main.cc (main): Use "hildon-application-manager" as the text
	domain.

2007-06-18  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.14

2007-06-15  Xan Lopez  <xan.lopez@nokia.com>

	* src/main.cc (view_clicked): this returns a boolean, not void.
	This might be triggering a bug in old versions of the trail if
	void return value is taken as FALSE.

2007-06-12  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (cmd_get_package_list): Filter out packages
	with the system-update flag that are available but not installed.

2007-06-07  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.13
